@@ -1,6 +1,8 @@
 from ucommon 5.0.1 to 5.0.2
 - fix for termios support.
 - shell getpass and inkey methods.
+- extended cipher key management methods.
+- crytographic archiver (car) added.
 
 from ucommon 5.0.0 to 5.0.1
 - missing commoncpp/numbers.h header.
